# tree-sitter-kanshi

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  example-file  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test.kanshi  tree-sitter.json
bindings/c/: tree-sitter-kanshi.h  tree-sitter-kanshi.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kanshi/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKanshiTests/: TreeSitterKanshiTests.swift
installation/: neovim.md
queries/kanshi/: highlights.scm
src/: grammar.json  node-types.json  parser.c
